cabal-version:       2.4
name:                riolml
version:             0.1.0.0
synopsis:
  Rio Lazy ML is an implementation of a lazy ML-like programming language.
homepage:            https://rio.amulet.works
license:             BSD-3-Clause
license-file:        LICENSE
author:              Abigail Magalhães
maintainer:          magalhaes.alcantara@pucpr.edu.br
category:            Language
extra-source-files:  CHANGELOG.md
build-type:          Custom

data-files:          rts/rts.o

executable rio
  main-is:             Main.hs
  other-modules:       Syntax
                     , Syntax.Subst

                     , Core.Lang
                     , Core.Lower
                     , Gm.Compile
                     , Gm.Machine

                     , Mach.Asm
                     , Mach.Assemble
                     , Main.Compile
                     , Paths_riolml

                     , Typing
                     , Typing.Monad
                     , Typing.Unify
                     , Typing.Errors
                     , Parser

  -- other-extensions:
  build-depends:       mtl
                     , base
                     , parsec
                     , process
                     , directory
                     , haskeline
                     , containers
                     , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing
